src/objects/PI_Survey_Association__c.object
<CustomObject>
    <fields>
        <fullName>PIData__c</fullName>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>Standalone Survey</relationshipLabel>
        <relationshipName>PI_Survey_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>PI Survey Associations</relationshipLabel>
        <relationshipName>PI_Survey_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE2_Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>PI Data</relationshipLabel>
        <relationshipName>PI_Survey_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PI Survey Association</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>PI Survey Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Survey Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>